simplify : 리스트로 변경하는 코드 간략화